[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["saitoshoichi <shoot319@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
